--- a/index.html
+++ b/index.html
@@ -6,65 +6,8 @@
     <meta name="viewport" content="width=device=width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatilbe" content="ie=edge">
     <title>Card Border Hover Animation</title>
+    <link rel ="stylesheet" type="text/css" href="style.css">
 </head>
-
-<style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    }
-
-    .card {
-      padding: 20px;
-      width: 350px;
-      box-shadow: 0 0 5px 0px #e2e2e2;
-      position: relative;
-    }
-
-    .card:after,
-    .card:before {
-       content: "";
-       position: absolute;
-       bottom: 0;
-       top: 0;
-       left: 0;
-       right: 0;
-       transition: transform .3s ease-in-out;
-    }
-
-    .card:before {
-        border-left: 1px solid black;
-        border-right: 1px solid black;
-        transform: scaleY(0);
-    }
-
-    .card:after {
-        border-top: 1px solid black;
-        border-bottom: 1px solid black;
-        transform: scaleX(0);
-    }
-
-    .card:hover:before {
-        transform: scaleY(1);
-    }
-
-    .card:hover:after {
-        transform: scaleX(1);
-    }
-
-    .text {
-      margin: 20px auto;
-    }
-</style>
 
 <body>
    <div class="card">
